# pypackage

./: .markdownlint.json  README.md  cookiecutter.json  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
docs/: prompts.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pylintrc  .style.yapf  CHANGELOG.md  MANIFEST.in  Makefile  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/docs/: conf.py  developing.md  index.md  installation.md  readme.md  usage.md
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
