[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
keywords = {{ cookiecutter.project_slug }}
{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
license_file = LICENSE
{%- endif %}
classifiers =
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Documentation = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/README.md
    Source = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
    Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues


[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.6
install_requires =
    importlib; python_version == "2.6"
    pendulum
    typer>=0.4.0
    debugpy>=1.5.1
test_requires =
    pytest>=3

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:app
